# aviation-risk-management-tool

./: README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260428_0001_create_model_baseline.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py
backend/app/models/: __init__.py  audit.py  committee.py  enums.py  llm.py  report.py  risk.py  role.py  user.py
backend/app/schemas/: __init__.py  risk.py
backend/app/services/: audit_service.py
backend/app/tests/: test_audit_service.py  test_health.py  test_models.py
docs/: architecture.md  data_model.md  product_vision.md  workflow.md
docs/codex_tasks/: task_001_project_documentation.md
